--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,8 @@ MarkupSafe==1.0
 pytz==2017.3
 six==1.11.0
 Werkzeug==0.14.1
+mongoengine==0.15.0
+pymongo==3.6.0
+Flask-WTF==0.14.2
+WTForms==2.1
+flask-mongoengine==0.9.3
