--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 aniso8601==2.0.0
 click==6.7
+dominate==2.3.1
 Flask==0.12.2
+Flask-Bootstrap==3.3.7.1
 Flask-Login==0.4.1
 Flask-RESTful==0.3.6
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
-pkg-resources==0.0.0
 pytz==2017.3
 six==1.11.0
+visitor==0.1.3
 Werkzeug==0.14.1
