--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,6 @@ pymongo==3.6.0
 Flask-WTF==0.14.2
 WTForms==2.1
 flask-mongoengine==0.9.3
+dominate==2.3.1
+flask-bootstrap==3.3.7.1
+visitor==0.1.3
