--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,15 @@
 aniso8601==2.0.0
 click==6.7
 Flask==0.12.2
+Flask-Bootstrap==3.3.7.1
 Flask-Login==0.4.1
 Flask-RESTful==0.3.6
+Flask-WTF==0.14.2
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 pytz==2017.3
 six==1.11.0
-Werkzeug==0.14.1
-mongoengine==0.15.0
-pymongo==3.6.0
-Flask-WTF==0.14.2
-WTForms==2.1
-flask-mongoengine==0.9.3
-dominate==2.3.1
-flask-bootstrap==3.3.7.1
 visitor==0.1.3
+Werkzeug==0.14.1
+WTForms==2.1
