--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
 aniso8601==2.0.0
+blinker==1.4
 click==6.7
+dominate==2.3.1
 Flask==0.12.2
+Flask-Bootstrap==3.1.1.2
 Flask-Login==0.4.1
+Flask-Mail==0.9.1
 Flask-RESTful==0.3.6
+Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+python-http-client==3.0.0
 pytz==2017.3
 six==1.11.0
+SQLAlchemy==1.2.2
+visitor==0.1.3
 Werkzeug==0.14.1
-itsdangerous==0.24
-Flask-SQLAlchemy==2.3.2
-Flask-Bootstrap==3.1.1.2
-Flask-WTF==0.14.2
+WTForms==2.1
