--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ MarkupSafe==1.0
 python-http-client==3.0.0
 pytz==2017.3
 requests==2.18.4
+Scrapy==1.5.0
 six==1.11.0
 SQLAlchemy==1.2.2
 urllib3==1.22
