--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
 aniso8601==2.0.0
+asn1crypto==0.24.0
+attrs==17.4.0
+Automat==0.6.0
 blinker==1.4
 certifi==2018.1.18
+cffi==1.11.5
 chardet==3.0.4
 click==6.7
+constantly==15.1.0
+cryptography==2.2.2
+cssselect==1.0.3
 dominate==2.3.1
 Flask==0.12.2
 Flask-Bootstrap==3.1.1.2
@@ -11,17 +18,32 @@ Flask-Mail==0.9.1
 Flask-RESTful==0.3.6
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
+gunicorn==19.7.1
+hyperlink==18.0.0
 idna==2.6
+incremental==17.5.0
 itsdangerous==0.24
 Jinja2==2.10
+lxml==4.2.1
 MarkupSafe==1.0
+parsel==1.4.0
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
+pycparser==2.18
+PyDispatcher==2.0.5
+pyOpenSSL==17.5.0
 python-http-client==3.0.0
 pytz==2017.3
+queuelib==1.5.0
 requests==2.18.4
 Scrapy==1.5.0
+service-identity==17.0.0
 six==1.11.0
 SQLAlchemy==1.2.2
+Twisted==17.9.0
 urllib3==1.22
 visitor==0.1.3
+w3lib==1.19.0
 Werkzeug==0.14.1
 WTForms==2.1
+zope.interface==4.4.3
