--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
-"login": {
-    "uni": "test",
-    "password": "test"
-
+"login":
+    {
+        "uni": "test",
+        "password": "test"
+    }
 }
