--- a/.gitignore
+++ b/.gitignore
@@ -87,6 +87,7 @@ celerybeat-schedule
 venv/
 ENV/
 new_venv/
+env/
 data_env/
 # Spyder project settings
 .spyderproject
@@ -113,3 +114,7 @@ utils/data
 data/full/
 app/config.json
 envirio/
+config.json
+
+#environment
+.vscode/
