--- a/.gitignore
+++ b/.gitignore
@@ -111,8 +111,11 @@ data_env/
 
 #data
 data/full/
-
+app/config.json
 envirio/
+config.json
+config_keys.json
+app/config_keys.json
 
 
 # robobrowser debug pages
