--- a/.gitignore
+++ b/.gitignore
@@ -113,9 +113,9 @@ data_env/
 data/full/
 app/config.json
 envirio/
-config.json
-config_keys.json
-app/config_keys.json
+# config.json
+# config_keys.json
+# app/config_keys.json
 
 
 # robobrowser debug pages
