--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ Flask-WTF==0.14.2
 gunicorn==19.7.1
 hyperlink==18.0.0
 idna==2.6
+robobrowser==0.5.3
 incremental==17.5.0
 itsdangerous==1.1.0
 Jinja2==2.10
