--- a/.gitignore
+++ b/.gitignore
@@ -113,8 +113,8 @@ data_env/
 data/full/
 app/config.json
 envirio/
-# config.json
-# config_keys.json
+config.json
+config_keys.json
 # app/config_keys.json
 
 
